# ReconScript

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DCO.txt  DEMO.md  Dockerfile  HELP.md  LICENSE  Makefile  PYTHON_REVIEW.md  README.md  RELEASE_NOTES.md  ROADMAP.md  ReconScript_SITREP.md  ReconScript_SITREP_v2.md  docker-compose.yml  install_dependencies.py  pyproject.toml  recon_script.py  reconscript.py  requirements-dev.txt  requirements.txt  start.bat  start.ps1  start.py  start.sh  web_ui.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  ci-matrix.yml  ci.yml  lint.yml
docs/: 2025-01-15-audit.md  2025-01-15-remediation-plan.md  ARCHIVE_PROJECT_AUDIT_AND_ROADMAP.md  AUDIT_REMEDIATION.md  CHANGELOG.md  DEPENDENCY_OVERVIEW.md  HELP.md  SECURITY.md
docs/screenshots/: preview.png.placeholder.txt
examples/: findings.json  sample_report.html  sample_report.json
keys/: dev_ed25519.priv  dev_ed25519.pub  dev_flask_secret.key
nacl/: __init__.py  exceptions.py  signing.py
reconscript/: __init__.py  __main__.py  cli.py  config.py  consent.py  core.py  logging.py  logging_utils.py  metrics.py  report.py  reporters.py  scanner.py  scope.py  ui.py
reconscript/scanner/: __init__.py  throttle.py
reconscript/schemas/: scope_manifest.v1.json
reconscript/static/: scripts.js  style.css
reconscript/static/js/: consent.js
reconscript/templates/: consent_modal.html  error.html  index.html  layout.html  login.html  report.html  report_detail.html  reports.html  results.html
requests/: __init__.py  api.py  exceptions.py  models.py  utils.py
results/: 127-0-0-1-20251016-032315.html  127-0-0-1-20251016-032315.json  juice.html  juice.json  juice.md
scripts/: generate_scope_manifest.py
templates/: report.html  report.md.j2  ui.html
tests/: conftest.py  test_cli.py  test_cli_markdown.py  test_consent_validation.py  test_core_safe_profile.py  test_exporters.py  test_help.py  test_helpers.py  test_report_hash.py  test_reporters.py  test_scanner_profile.py  test_scope_validation.py  test_throttle.py  test_ui_safe_profile.py  test_web_ui.py
tests/integration/: test_safe_profile_smoke.py  test_scan_mock.py  test_scan_scanme.py
