# Modified by codex: 2024-05-08
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reconscript"
version = "0.5.0"
description = "Safe, read-only reconnaissance helper for authorized assessments only; use responsibly within agreed scope."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [{ name = "Daniel Madden" }]
keywords = ["reconnaissance", "security", "safety"]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Information Technology",
  "Topic :: Security",
  "Development Status :: 4 - Beta"
]

dependencies = [
  "requests==2.31.0",
  "urllib3==2.2.3",
  "jinja2==3.1.6",
  "flask==2.3.3",
  "rich==13.7.1",
  "tabulate==0.9.0",
  "colorama==0.4.6",
  "weasyprint==66.0",
  "fonttools==4.60.1",
  "tinycss2==1.2.1",
  "cssselect2==0.8.0",
  "pyphen==0.17.2",
  "pydyf==0.11.0",
  "markupsafe==3.0.3",
  "itsdangerous==2.1.2",
  "werkzeug==3.0.3",
]

[project.optional-dependencies]
pdf = [
  "weasyprint==66.0"
]
dev = [
  "pytest>=7.4,<8",
  "responses>=0.25,<0.26",
  "flake8>=6.1,<7",
  "bandit>=1.7,<2",
  "build",
  "twine"
]
docs = [
  "mkdocs>=1.5,<2",
  "mkdocs-material>=9,<10"
]

[project.urls]
Homepage = "https://example.com/reconscript"
Repository = "https://example.com/reconscript/repo"
Issues = "https://example.com/reconscript/issues"

[project.scripts]
safe-recon = "reconscript.cli:main"
reconscript = "reconscript.cli:main"

[tool.setuptools]
packages = ["reconscript"]

[tool.setuptools.package-data]
reconscript = ["templates/*.html", "static/*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
