# Modified by codex: 2024-05-08
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reconscript"
version = "0.6.0"
description = "Safe, read-only reconnaissance helper for authorized assessments only; use responsibly within agreed scope."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"

authors = [{ name = "Daniel Madden" }]
keywords = ["reconnaissance", "security", "safety"]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Information Technology",
  "Topic :: Security",
  "Development Status :: 4 - Beta"
]

dependencies = [
  "Flask>=3.0",
  "Flask-Login>=0.6",
  "Jinja2>=3.1",
  "requests>=2.31",
  "urllib3>=2.2",
  "python-dotenv>=1.0",
  "rich>=13.7",
  "prometheus-client>=0.19",
  "PyNaCl>=1.5",
]

[project.optional-dependencies]
dev = [
  "black==24.4.2",
  "ruff==0.5.4",
  "bandit==1.7.9",
  "pip-audit==2.7.3",
  "pytest==8.2.2"
]

[project.urls]
Homepage = "https://example.com/reconscript"
Repository = "https://example.com/reconscript/repo"
Issues = "https://example.com/reconscript/issues"

[project.scripts]
safe-recon = "reconscript.cli:main"
reconscript = "reconscript.cli:main"

[tool.setuptools]
packages = ["reconscript"]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.package-data]
reconscript = ["templates/*.html", "templates/*.j2", "static/*", "static/js/*.js"]

[tool.ruff]
target-version = "py39"
line-length = 100
exclude = ["results"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
  "integration: opt-in network integration tests"
]
